<resources>
    <string name="app_name">Stationery Shop</string>
    <string name="title_activity_login">Stationery Shop</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="stationery_retrievals">Stationery Retrievals</string>
    <string name="disbursements">Disbursements</string>
    <string name="stock_adjustment_requests">Stock Adjustment Requests</string>
    <string name="make_stock_adjustments">Make Stock Adjustment</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">UNDER CONSTRUCTION</string>
    <string name="requisition_request">Requisition Request</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="menu_option_1">Settings</string>
    <string name="default_hostname">http://stationeryshopdebug.azurewebsites.net/</string>
    <!--<string name="default_hostname">http://172.17.107.161/StationeryShop</string>-->
 <!--   <string name="default_hostname">http://172.17.185.218/StationeryShop</string>-->
    <string name="pref_title_hostname">Hostname</string>
    <string name="radio_button_active">Active</string>
    <string name="radio_button_all">All</string>
    <string name="radio_button_pending">Pending</string>
    <string name="disbursement_id_label">ID:</string>
    <string name="department_name_label">Department:</string>
    <string name="search_hint_requisition">Search by Requisition ID</string>
    <string name="search_hint_disbursement">Search by Department or Disbursement ID</string>
    <string name="label_date">Created Date</string>
    <string name="label_department">Department</string>
    <string name="label_collection_point">Collection Point</string>
    <string name="preference_file_key">login_preferences</string>
    <string name="management_report">Management Reports</string>
    <string name="department_usage">Department Usage</string>
    <string name="store_operations">Store Operations</string>
    <string name="label_requested_date">Date Requested</string>
    <string name="label_employee">Employee</string>
    <string name="label_status">Status</string>
    <string name="label_remarks">Remarks</string>
    <string name="label_approval_remarks">Approval Remarks</string>
    <string name="label_rejection_remarks">Rejection Remarks</string>
    <string name="department_options">Department Options</string>
    <string name="header_department_rep">Department Representative</string>
    <string name="header_delegation">Current Delegations</string>
    <string name="delegate_dialog_title">Delegate Manager Role</string>
    <string name="search_hint_stock_adjustment_request">Search by ID or Name</string>
    <string name="original_quantity_label">Original Quantity</string>
    <string name="after_quantity_label">After Quantity</string>
    <string name="detail_reason_hint">Reason</string>
    <string name="search_hint_retrieval">Search by Retrieval ID</string>
    <string name="confirm_retrieval">Confirm Retrieval</string>
    <string name="label_item_name">Item Name</string>
    <string name="label_bin">Bin</string>

    <!--strings for Make Stock Adjustment-->
    <string name="add_item">Add Item</string>
    <string name="item_code">Item Code</string>
    <string name="item_name">Item Name</string>
    <string name="reason">Reason</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="make_stock_adjustments">Make Stock Adjustments</string>
    <string name="stock_adjustment_requests">Stock Adjustment Requests</string>



</resources>