<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Department Head">
        <menu>
            <item
                android:id="@+id/nav_requisition_request"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/requisition_request" />
            <item
                android:id="@+id/nav_department_options"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/department_options" />
        </menu>
    </item>

    <item android:title="Store Clerk">
        <menu>
            <item
                android:id="@+id/nav_stationery_retrievals"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/stationery_retrievals" />
            <item
                android:id="@+id/nav_disbursements"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/disbursements" />
            <item
                android:id="@+id/nav_make_stock_adjustments"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/make_stock_adjustments" />
        </menu>
    </item>


    <item android:title="Store Manager">
        <menu>
            <item
                android:id="@+id/nav_stock_adjustment_requests"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/stock_adjustment_requests" />
            <item
                android:id="@+id/nav_department_usage"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/department_usage" />
            <item
                android:id="@+id/nav_store_operations"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/store_operations" />
        </menu>
    </item>

    <item android:title="Manage">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
