<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Store Manager">
        <menu>
            <item
                android:id="@+id/nav_stock_adjustments"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/stock_adjustments" />
            <item
                android:id="@+id/nav_department_usage"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/department_usage" />
            <item
                android:id="@+id/nav_store_operations"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/store_operations" />

        </menu>
    </item>

    <item android:title="Manage">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
