<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="37dp"
        android:text="@string/add_item"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="93dp"
        android:text="@string/item_code"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="130dp"
        android:text="@string/adjusted_quantity"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_reason"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="-187dp"
        android:text="@string/reason"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_reason"
        style="@android:style/Widget.EditText"
        android:layout_width="317dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_below="@id/add_reason"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="197dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:selectAllOnFocus="false"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignEnd="@+id/add_reason"
        android:layout_below="@+id/add_reason"
        android:text="@string/add"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/add_itemcode"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginEnd="77dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/add_quantity"
        android:layout_width="164dp"
        android:layout_height="20dp"
        android:layout_alignEnd="@+id/add_itemcode"
        android:layout_alignTop="@+id/textView7"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>