<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="149dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/stock_adjustment_item_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E030"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/stock_adjustment_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pilot G2 Black"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">

                <TableRow>

                    <TextView
                        android:id="@+id/original_quantity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingRight="5dp"
                        android:text="@string/original_quantity_label"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/after_quantity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:text="@string/after_quantity_label"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/original_quantity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="20"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/after_quantity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="30"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/detail_layout_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/detail_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="top|left"
                    android:hint="@string/detail_reason_hint"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:text="THIS IS NOT GOOD" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>